--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,8 @@ main {
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
+  height: 150vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,6 +27,7 @@ main {
 .container {
   text-align: center;
   padding: 20px;
+  margin-top: 20px;
 }
 
 .page-title {
@@ -59,6 +62,7 @@ img {
 #tentativas {
   font-size: 18px;
   color: rgb(173, 163, 163);
+  margin-bottom: 5px;
 }
 
 #resultado {
